@@ -1,3 +1,8 @@
+2014-02-28  John Dallaway  <john@dallaway.org.uk>
+
+	* src/stm32_misc.c: Ensure TIM2 clock enabled when profiling.
+	[Bugzilla 1001953]
+
 2013-04-06  Jerzy Dyrda  <jerzdy@gmail.com>
 
 	* include/var_io_eth.h: 
@@ -380,7 +385,7 @@
 // ####GPLCOPYRIGHTBEGIN####                                                
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 2008, 2009, 2011, 2013 Free Software Foundation, Inc.                        
+// Copyright (C) 2008, 2009, 2011, 2013, 2014 Free Software Foundation, Inc.                        
 //
 // This program is free software; you can redistribute it and/or modify     
 // it under the terms of the GNU General Public License as published by     
